changes -- add dummy data endpoint for dashboard
